[package]
name = "terrars-hashicorp-random"
edition = "2021"
version = "0.1.0"
description = "Pre-generated Terrars Random bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-hashicorp-random"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.0.9"

[features]
id = []
integer = []
password = []
pet = []
shuffle = []
string = []
uuid = []
